src/third_party/assimp/external/cimport.h

struct aiScene;
struct aiFileIO;
struct aiLogStream {
    aiLogStreamCallback callback;
    char *user;
};
struct aiPropertyStore {
    char sentinel;
};
typedef int aiBool;
 const  aiScene *aiImportFile(
        const char *pFile,
        unsigned int pFlags);
 const  aiScene *aiImportFileEx(
        const char *pFile,
        unsigned int pFlags,
         aiFileIO *pFS);
 const  aiScene *aiImportFileExWithProperties(
        const char *pFile,
        unsigned int pFlags,
         aiFileIO *pFS,
        const  aiPropertyStore *pProps);
 const  aiScene *aiImportFileFromMemory(
        const char *pBuffer,
        unsigned int pLength,
        unsigned int pFlags,
        const char *pHint);
 const  aiScene *aiImportFileFromMemoryWithProperties(
        const char *pBuffer,
        unsigned int pLength,
        unsigned int pFlags,
        const char *pHint,
        const  aiPropertyStore *pProps);
 const  aiScene *aiApplyPostProcessing(
        const  aiScene *pScene,
        unsigned int pFlags);
  aiLogStream aiGetPredefinedLogStream(
         aiDefaultLogStream pStreams,
        const char *file);
 void aiAttachLogStream(
        const  aiLogStream *stream);
 void aiEnableVerboseLogging(aiBool d);
  aiReturn aiDetachLogStream(
        const  aiLogStream *stream);
 void aiDetachAllLogStreams(void);
 void aiReleaseImport(
        const  aiScene *pScene);
 const char *aiGetErrorString(void);
 aiBool aiIsExtensionSupported(
        const char *szExtension);
 void aiGetExtensionList(
         aiString *szOut);
 void aiGetMemoryRequirements(
        const  aiScene *pIn,
         aiMemoryInfo *in);
  aiPropertyStore *aiCreatePropertyStore(void);
 void aiReleasePropertyStore( aiPropertyStore *p);
 void aiSetImportPropertyInteger(
         aiPropertyStore *store,
        const char *szName,
        int value);
 void aiSetImportPropertyFloat(
         aiPropertyStore *store,
        const char *szName,
        float value);
 void aiSetImportPropertyString(
         aiPropertyStore *store,
        const char *szName,
        const  aiString *st);
 void aiSetImportPropertyMatrix(
         aiPropertyStore *store,
        const char *szName,
        const  aiMatrix4x4 *mat);
 void aiCreateQuaternionFromMatrix(
         aiQuaternion *quat,
        const  aiMatrix3x3 *mat);
 void aiDecomposeMatrix(
        const  aiMatrix4x4 *mat,
         aiVector3D *scaling,
         aiQuaternion *rotation,
         aiVector3D *position);
 void aiTransposeMatrix4(
         aiMatrix4x4 *mat);
 void aiTransposeMatrix3(
         aiMatrix3x3 *mat);
 void aiTransformVecByMatrix3(
         aiVector3D *vec,
        const  aiMatrix3x3 *mat);
 void aiTransformVecByMatrix4(
         aiVector3D *vec,
        const  aiMatrix4x4 *mat);
 void aiMultiplyMatrix4(
         aiMatrix4x4 *dst,
        const  aiMatrix4x4 *src);
 void aiMultiplyMatrix3(
         aiMatrix3x3 *dst,
        const  aiMatrix3x3 *src);
 void aiIdentityMatrix3(
         aiMatrix3x3 *mat);
 void aiIdentityMatrix4(
         aiMatrix4x4 *mat);
 size_t aiGetImportFormatCount(void);
 const  aiImporterDesc *aiGetImportFormatDescription(size_t pIndex);
 int aiVector2AreEqual(
        const  aiVector2D *a,
        const  aiVector2D *b);
 int aiVector2AreEqualEpsilon(
        const  aiVector2D *a,
        const  aiVector2D *b,
        const float epsilon);
 void aiVector2Add(
         aiVector2D *dst,
        const  aiVector2D *src);
 void aiVector2Subtract(
         aiVector2D *dst,
        const  aiVector2D *src);
 void aiVector2Scale(
         aiVector2D *dst,
        const float s);
 void aiVector2SymMul(
         aiVector2D *dst,
        const  aiVector2D *other);
 void aiVector2DivideByScalar(
         aiVector2D *dst,
        const float s);
 void aiVector2DivideByVector(
         aiVector2D *dst,
         aiVector2D *v);
 float aiVector2Length(
        const  aiVector2D *v);
 float aiVector2SquareLength(
        const  aiVector2D *v);
 void aiVector2Negate(
         aiVector2D *dst);
 float aiVector2DotProduct(
        const  aiVector2D *a,
        const  aiVector2D *b);
 void aiVector2Normalize(
         aiVector2D *v);
 int aiVector3AreEqual(
        const  aiVector3D *a,
        const  aiVector3D *b);
 int aiVector3AreEqualEpsilon(
        const  aiVector3D *a,
        const  aiVector3D *b,
        const float epsilon);
 int aiVector3LessThan(
        const  aiVector3D *a,
        const  aiVector3D *b);
 void aiVector3Add(
         aiVector3D *dst,
        const  aiVector3D *src);
 void aiVector3Subtract(
         aiVector3D *dst,
        const  aiVector3D *src);
 void aiVector3Scale(
         aiVector3D *dst,
        const float s);
 void aiVector3SymMul(
         aiVector3D *dst,
        const  aiVector3D *other);
 void aiVector3DivideByScalar(
         aiVector3D *dst,
        const float s);
 void aiVector3DivideByVector(
         aiVector3D *dst,
         aiVector3D *v);
 float aiVector3Length(
        const  aiVector3D *v);
 float aiVector3SquareLength(
        const  aiVector3D *v);
 void aiVector3Negate(
         aiVector3D *dst);
 float aiVector3DotProduct(
        const  aiVector3D *a,
        const  aiVector3D *b);
 void aiVector3CrossProduct(
         aiVector3D *dst,
        const  aiVector3D *a,
        const  aiVector3D *b);
 void aiVector3Normalize(
         aiVector3D *v);
 void aiVector3NormalizeSafe(
         aiVector3D *v);
 void aiVector3RotateByQuaternion(
         aiVector3D *v,
        const  aiQuaternion *q);
 void aiMatrix3FromMatrix4(
         aiMatrix3x3 *dst,
        const  aiMatrix4x4 *mat);
 void aiMatrix3FromQuaternion(
         aiMatrix3x3 *mat,
        const  aiQuaternion *q);
 int aiMatrix3AreEqual(
        const  aiMatrix3x3 *a,
        const  aiMatrix3x3 *b);
 int aiMatrix3AreEqualEpsilon(
        const  aiMatrix3x3 *a,
        const  aiMatrix3x3 *b,
        const float epsilon);
 void aiMatrix3Inverse(
         aiMatrix3x3 *mat);
 float aiMatrix3Determinant(
        const  aiMatrix3x3 *mat);
 void aiMatrix3RotationZ(
         aiMatrix3x3 *mat,
        const float angle);
 void aiMatrix3FromRotationAroundAxis(
         aiMatrix3x3 *mat,
        const  aiVector3D *axis,
        const float angle);
 void aiMatrix3Translation(
         aiMatrix3x3 *mat,
        const  aiVector2D *translation);