src/third_party/assimp/assimp.odin


MaterialProperty :: struct {
    mKey : String,
    mSemantic : _c.uint,
    mIndex : _c.uint,
    mDataLength : _c.uint,
    mType : PropertyTypeInfo,
    mData : cstring,
};

Material :: struct {
    mProperties : [^]^MaterialProperty,
    mNumProperties : _c.uint,
    mNumAllocated : _c.uint,
};

Matrix3x3 :: struct {
    a1 : _c.float,
    a2 : _c.float,
    a3 : _c.float,
    b1 : _c.float,
    b2 : _c.float,
    b3 : _c.float,
    c1 : _c.float,
    c2 : _c.float,
    c3 : _c.float,
};

Matrix4x4 :: struct {
    a1 : _c.float,
    a2 : _c.float,
    a3 : _c.float,
    a4 : _c.float,
    b1 : _c.float,
    b2 : _c.float,
    b3 : _c.float,
    b4 : _c.float,
    c1 : _c.float,
    c2 : _c.float,
    c3 : _c.float,
    c4 : _c.float,
    d1 : _c.float,
    d2 : _c.float,
    d3 : _c.float,
    d4 : _c.float,
};

Face :: struct {
    mNumIndices : _c.uint,
    mIndices : [^]_c.uint,
};

VertexWeight :: struct {
    mVertexId : _c.uint,
    mWeight : _c.float,
};

Node :: struct {
    mName : String,
    mTransformation : Matrix4x4,
    mParent : ^Node,
    mNumChildren : _c.uint,
    mChildren : [^]^Node,
    mNumMeshes : _c.uint,
    mMeshes : [^]_c.uint,
    mMetaData : ^Metadata,
};

Bone :: struct {
    mName : String,
    mNumWeights : _c.uint,
    mArmature : ^Node,
    mNode : ^Node,
    mWeights : [^]VertexWeight,
    mOffsetMatrix : Matrix4x4,
};

AnimMesh :: struct {
    mName : String,
    mVertices : [^]Vector3D,
    mNormals : [^]Vector3D,
    mTangents : [^]Vector3D,
    mBitangents : [^]Vector3D,
    mColors : [8][^]Color4D,
    mTextureCoords : [8][^]Vector3D,
    mNumVertices : _c.uint,
    mWeight : _c.float,
};

Mesh :: struct {
    mPrimitiveTypes : _c.uint,
    mNumVertices : _c.uint,
    mNumFaces : _c.uint,
    mVertices : [^]Vector3D,
    mNormals : [^]Vector3D,
    mTangents : [^]Vector3D,
    mBitangents : [^]Vector3D,
    mColors : [8]^Color4D,
    mTextureCoords : [8][^]Vector3D,
    mNumUVComponents : [8]_c.uint,
    mFaces : [^]Face,
    mNumBones : _c.uint,
    mBones : [^]^Bone,
    mMaterialIndex : _c.uint,
    mName : String,
    mNumAnimMeshes : _c.uint,
    mAnimMeshes : [^]^AnimMesh,
    mMethod : _c.uint,
    mAABB : AABB,
    mTextureCoordsNames : [^]^String,
};

MetadataEntry :: struct {
    mType : MetadataType,
    mData : rawptr,
};

Metadata :: struct {
    mNumProperties : _c.uint,
    mKeys : [^]String,
    mValues : [^]MetadataEntry,
};

Quaternion :: struct {
    w : _c.float,
    x : _c.float,
    y : _c.float,
    z : _c.float,
};

Texel :: struct {
    b : _c.uchar,
    g : _c.uchar,
    r : _c.uchar,
    a : _c.uchar,
};

Texture :: struct {
    mWidth : _c.uint,
    mHeight : _c.uint,
    achFormatHint : [9]_c.char,
    pcData : ^Texel,
    mFilename : String,
};

Plane :: struct {
    a : _c.float,
    b : _c.float,
    c : _c.float,
    d : _c.float,
};

Ray :: struct {
    pos : Vector3D,
    dir : Vector3D,
};

Color3D :: struct {
    r : _c.float,
    g : _c.float,
    b : _c.float,
};

String :: struct {
    length : u32,
    data : [1024]_c.char,
};

MemoryInfo :: struct {
    textures : _c.uint,
    materials : _c.uint,
    meshes : _c.uint,
    nodes : _c.uint,
    animations : _c.uint,
    cameras : _c.uint,
    lights : _c.uint,
    total : _c.uint,
};

Vector2D :: struct {
    x : _c.float,
    y : _c.float,
};

Vector3D :: struct {
    x : _c.float,
    y : _c.float,
    z : _c.float,
};

@(default_calling_convention="c")
foreign assimp {

    @(link_name="aiImportFile")
    import_file :: proc(pFile : cstring, pFlags : PostProcessStepsFlags) -> ^Scene ---;

    @(link_name="aiImportFileEx")
    import_file_ex :: proc(pFile : cstring, pFlags : _c.uint, pFS : ^FileIO) -> ^Scene ---;

    @(link_name="aiImportFileExWithProperties")
    import_file_ex_with_properties :: proc(pFile : cstring, pFlags : _c.uint, pFS : ^FileIO, pProps : ^PropertyStore) -> ^Scene ---;

    @(link_name="aiImportFileFromMemory")
    import_file_from_memory :: proc(pBuffer : cstring, pLength : _c.uint, pFlags : _c.uint, pHint : cstring) -> ^Scene ---;

    @(link_name="aiImportFileFromMemoryWithProperties")
    import_file_from_memory_with_properties :: proc(pBuffer : cstring, pLength : _c.uint, pFlags : _c.uint, pHint : cstring, pProps : ^PropertyStore) -> ^Scene ---;

    @(link_name="aiApplyPostProcessing")
    apply_post_processing :: proc(pScene : ^Scene, pFlags : _c.uint) -> ^Scene ---;

    @(link_name="aiGetPredefinedLogStream")
    get_predefined_log_stream :: proc(pStreams : DefaultLogStream, file : cstring) -> LogStream ---;

    @(link_name="aiAttachLogStream")
    attach_log_stream :: proc(stream : ^LogStream) ---;

    @(link_name="aiEnableVerboseLogging")
    enable_verbose_logging :: proc(d : _c.int) ---;

    @(link_name="aiDetachLogStream")
    detach_log_stream :: proc(stream : ^LogStream) -> Return ---;

    @(link_name="aiDetachAllLogStreams")
    detach_all_log_streams :: proc() ---;

    @(link_name="aiReleaseImport")
    release_import :: proc(pScene : ^Scene) ---;

    @(link_name="aiGetErrorString")
    get_error_string :: proc() -> cstring ---;

    @(link_name="aiIsExtensionSupported")
    is_extension_supported :: proc(szExtension : cstring) -> _c.int ---;

    @(link_name="aiGetExtensionList")
    get_extension_list :: proc(szOut : ^String) ---;

    @(link_name="aiGetMemoryRequirements")
    get_memory_requirements :: proc(pIn : ^Scene, _in : ^MemoryInfo) ---;

    @(link_name="aiCreatePropertyStore")
    create_property_store :: proc() -> ^PropertyStore ---;

    @(link_name="aiReleasePropertyStore")
    release_property_store :: proc(p : ^PropertyStore) ---;

    @(link_name="aiSetImportPropertyInteger")
    set_import_property_integer :: proc(store : ^PropertyStore, szName : cstring, value : _c.int) ---;

    @(link_name="aiSetImportPropertyFloat")
    set_import_property_float :: proc(store : ^PropertyStore, szName : cstring, value : _c.float) ---;

    @(link_name="aiSetImportPropertyString")
    set_import_property_string :: proc(store : ^PropertyStore, szName : cstring, st : ^String) ---;

    @(link_name="aiSetImportPropertyMatrix")
    set_import_property_matrix :: proc(store : ^PropertyStore, szName : cstring, mat : ^Matrix4x4) ---;

    @(link_name="aiCreateQuaternionFromMatrix")
    create_quaternion_from_matrix :: proc(quat : ^Quaternion, mat : ^Matrix3x3) ---;

    @(link_name="aiDecomposeMatrix")
    decompose_matrix :: proc(mat : ^Matrix4x4, scaling : ^Vector3D, rotation : ^Quaternion, position : ^Vector3D) ---;

    @(link_name="aiTransposeMatrix4")
    transpose_matrix4 :: proc(mat : ^Matrix4x4) ---;

    @(link_name="aiTransposeMatrix3")
    transpose_matrix3 :: proc(mat : ^Matrix3x3) ---;

    @(link_name="aiTransformVecByMatrix3")
    transform_vec_by_matrix3 :: proc(vec : ^Vector3D, mat : ^Matrix3x3) ---;

    @(link_name="aiTransformVecByMatrix4")
    transform_vec_by_matrix4 :: proc(vec : ^Vector3D, mat : ^Matrix4x4) ---;

    @(link_name="aiMultiplyMatrix4")
    multiply_matrix4 :: proc(dst : ^Matrix4x4, src : ^Matrix4x4) ---;

    @(link_name="aiMultiplyMatrix3")
    multiply_matrix3 :: proc(dst : ^Matrix3x3, src : ^Matrix3x3) ---;

    @(link_name="aiIdentityMatrix3")
    identity_matrix3 :: proc(mat : ^Matrix3x3) ---;

    @(link_name="aiIdentityMatrix4")
    identity_matrix4 :: proc(mat : ^Matrix4x4) ---;

    @(link_name="aiGetImportFormatCount")
    get_import_format_count :: proc() -> _c.size_t ---;

    @(link_name="aiGetImportFormatDescription")
    get_import_format_description :: proc(pIndex : _c.size_t) -> ^ImporterDesc ---;

    @(link_name="aiVector2AreEqual")
    vector2_are_equal :: proc(a : ^Vector2D, b : ^Vector2D) -> _c.int ---;

    @(link_name="aiVector2AreEqualEpsilon")
    vector2_are_equal_epsilon :: proc(a : ^Vector2D, b : ^Vector2D, epsilon : _c.float) -> _c.int ---;

    @(link_name="aiVector2Add")
    vector2_add :: proc(dst : ^Vector2D, src : ^Vector2D) ---;

    @(link_name="aiVector2Subtract")
    vector2_subtract :: proc(dst : ^Vector2D, src : ^Vector2D) ---;

    @(link_name="aiVector2Scale")
    vector2_scale :: proc(dst : ^Vector2D, s : _c.float) ---;

    @(link_name="aiVector2SymMul")
    vector2_sym_mul :: proc(dst : ^Vector2D, other : ^Vector2D) ---;

    @(link_name="aiVector2DivideByScalar")
    vector2_divide_by_scalar :: proc(dst : ^Vector2D, s : _c.float) ---;

    @(link_name="aiVector2DivideByVector")
    vector2_divide_by_vector :: proc(dst : ^Vector2D, v : ^Vector2D) ---;

    @(link_name="aiVector2Length")
    vector2_length :: proc(v : ^Vector2D) -> _c.float ---;

    @(link_name="aiVector2SquareLength")
    vector2_square_length :: proc(v : ^Vector2D) -> _c.float ---;

    @(link_name="aiVector2Negate")
    vector2_negate :: proc(dst : ^Vector2D) ---;

    @(link_name="aiVector2DotProduct")
    vector2_dot_product :: proc(a : ^Vector2D, b : ^Vector2D) -> _c.float ---;

    @(link_name="aiVector2Normalize")
    vector2_normalize :: proc(v : ^Vector2D) ---;

    @(link_name="aiVector3AreEqual")
    vector3_are_equal :: proc(a : ^Vector3D, b : ^Vector3D) -> _c.int ---;

    @(link_name="aiVector3AreEqualEpsilon")
    vector3_are_equal_epsilon :: proc(a : ^Vector3D, b : ^Vector3D, epsilon : _c.float) -> _c.int ---;

    @(link_name="aiVector3LessThan")
    vector3_less_than :: proc(a : ^Vector3D, b : ^Vector3D) -> _c.int ---;

    @(link_name="aiVector3Add")
    vector3_add :: proc(dst : ^Vector3D, src : ^Vector3D) ---;

    @(link_name="aiVector3Subtract")
    vector3_subtract :: proc(dst : ^Vector3D, src : ^Vector3D) ---;

    @(link_name="aiVector3Scale")
    vector3_scale :: proc(dst : ^Vector3D, s : _c.float) ---;

    @(link_name="aiVector3SymMul")
    vector3_sym_mul :: proc(dst : ^Vector3D, other : ^Vector3D) ---;

    @(link_name="aiVector3DivideByScalar")
    vector3_divide_by_scalar :: proc(dst : ^Vector3D, s : _c.float) ---;

    @(link_name="aiVector3DivideByVector")
    vector3_divide_by_vector :: proc(dst : ^Vector3D, v : ^Vector3D) ---;

    @(link_name="aiVector3Length")
    vector3_length :: proc(v : ^Vector3D) -> _c.float ---;

    @(link_name="aiVector3SquareLength")
    vector3_square_length :: proc(v : ^Vector3D) -> _c.float ---;

    @(link_name="aiVector3Negate")
    vector3_negate :: proc(dst : ^Vector3D) ---;

    @(link_name="aiVector3DotProduct")
    vector3_dot_product :: proc(a : ^Vector3D, b : ^Vector3D) -> _c.float ---;

    @(link_name="aiVector3CrossProduct")
    vector3_cross_product :: proc(dst : ^Vector3D, a : ^Vector3D, b : ^Vector3D) ---;

    @(link_name="aiVector3Normalize")
    vector3_normalize :: proc(v : ^Vector3D) ---;

    @(link_name="aiVector3NormalizeSafe")
    vector3_normalize_safe :: proc(v : ^Vector3D) ---;

    @(link_name="aiVector3RotateByQuaternion")
    vector3_rotate_by_quaternion :: proc(v : ^Vector3D, q : ^Quaternion) ---;

    @(link_name="aiMatrix3FromMatrix4")
    matrix3_from_matrix4 :: proc(dst : ^Matrix3x3, mat : ^Matrix4x4) ---;

    @(link_name="aiMatrix3FromQuaternion")
    matrix3_from_quaternion :: proc(mat : ^Matrix3x3, q : ^Quaternion) ---;

    @(link_name="aiMatrix3AreEqual")
    matrix3_are_equal :: proc(a : ^Matrix3x3, b : ^Matrix3x3) -> _c.int ---;

    @(link_name="aiMatrix3AreEqualEpsilon")
    matrix3_are_equal_epsilon :: proc(a : ^Matrix3x3, b : ^Matrix3x3, epsilon : _c.float) -> _c.int ---;

    @(link_name="aiMatrix3Inverse")
    matrix3_inverse :: proc(mat : ^Matrix3x3) ---;

    @(link_name="aiMatrix3Determinant")
    matrix3_determinant :: proc(mat : ^Matrix3x3) -> _c.float ---;

    @(link_name="aiMatrix3RotationZ")
    matrix3_rotation_z :: proc(mat : ^Matrix3x3, angle : _c.float) ---;

    @(link_name="aiMatrix3FromRotationAroundAxis")
    matrix3_from_rotation_around_axis :: proc(mat : ^Matrix3x3, axis : ^Vector3D, angle : _c.float) ---;

    @(link_name="aiMatrix3Translation")
    matrix3_translation :: proc(mat : ^Matrix3x3, translation : ^Vector2D) ---;
